--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
@@ -19,15 +20,19 @@
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/platform-server": "^6.1.3",
     "@angular/router": "^6.0.3",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/router-store": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "@ngrx/store-devtools": "^6.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
     "firebase": "^5.3.1",
     "rxjs": "^6.0.0",
+    "ts-loader": "^4.5.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -49,6 +54,7 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "webpack-cli": "^3.1.0"
   }
 }
